# StructGRIS

./: .clang-format  .gitignore  CMakeLists.txt  README.md
Containers/: circular_deque.hpp  sg_AtomicUpdater.hpp  sg_LogBuffer.cpp  sg_LogBuffer.hpp  sg_OwnedMap.hpp  sg_StaticMap.hpp  sg_StaticVector.hpp  sg_StrongArray.hpp  sg_TaggedAudioBuffer.hpp  sg_ThreadSafeBuffer.hpp
Data/: Quaternion.cpp  Quaternion.hpp  sg_AudioStructs.cpp  sg_AudioStructs.hpp  sg_CommandId.hpp  sg_LegacyLbapPosition.cpp  sg_LegacyLbapPosition.hpp  sg_LegacySpatFileFormat.cpp  sg_LegacySpatFileFormat.hpp  sg_LogicStrucs.cpp  sg_LogicStrucs.hpp  sg_Macros.hpp  sg_Narrow.hpp  sg_PolarVector.cpp  sg_PolarVector.hpp  sg_Position.cpp  sg_Position.hpp  sg_SpatMode.cpp  sg_SpatMode.hpp  sg_constants.cpp  sg_constants.hpp
Data/StrongTypes/: sg_CartesianVector.cpp  sg_CartesianVector.hpp  sg_Dbfs.hpp  sg_Degrees.hpp  sg_Radians.hpp  sg_SourceIndex.hpp  sg_StrongFloat.hpp  sg_StrongIndex.hpp
Source/: Quaternion.cpp  Quaternion.hpp  ValueTreeUtilities.cpp  ValueTreeUtilities.hpp
Source/StrongTypes/: sg_Radians.hpp
Utilities/: ValueTreeUtilities.cpp
